# qtcreator-template-sfml

./: CMakeLists.txt  Readme.md  file.pro  file.qbs  main.cpp  wizard.json
